--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Asap+Condensed:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body{
+    background-color: rgb(236, 224, 188);
     font-family: 'Poppins', sans-serif;
-    background-color: rgb(255, 229, 190);
 }
 .navegacion{
     color: black;
@@ -17,44 +18,28 @@ body{
     right: 20px;
     display:inline-block;
 }
+.color__nav{
+    background-color: rgb(255, 214, 152);
+}
 .h1s{
     margin-top: 5vh;
     text-align: center;
     color:rgb(0, 0, 0);
 }
-.listaitem{
-    list-style: none;
-    display: inline-block;
-    text-decoration: none;
-    margin-left: 15px;
-    font-size: 1.2rem;
-}
-.anclasNav{
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-}
-.anclasNav:hover{
-    /* transition-duration: 550ms; */
-    text-decoration: none;
-    color: rgb(189, 189, 189);
-}
-.anclasNav:active{
-    color: white;
-}
 .header{
-    height: 20vh;
     margin-top: 0px;
     background-color: rgb(255, 214, 152);
+}
+.navbar {
+    font-size: 19px;
+}
+.navbar-nav{
+    margin-top: 10vh;
 }
 .logo{
     margin-top: 0px;
     margin-left: 0px;
     text-align: center;
-}
-.tituloLogo{
-    margin-left: 20px;
-    color:rgb(0, 0, 0);
-    font-family: 'Asap Condensed', sans-serif;
 }
 .anclaTitulo{
     text-decoration: none;
@@ -64,16 +49,25 @@ body{
 .partesform{
     border: 2px solid rgb(255, 153, 0);
     display: inline-block;
-    width: 14%;
+    width: 50%;
     height: 2rem;
-    margin-left: 1%;
+    margin-left: 0;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 }
 .botonesForm{
-    width: 8%;
-    margin-left: 2%;
+    width: 50%;
+    margin-left: 0%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 }
 .footer{
     background-color: rgb(255, 214, 152);
+    margin-bottom: 0;
+    position: absolute;
+    width: 100%; 
 }
 .copyright{
     text-align: center;
@@ -84,8 +78,14 @@ body{
 }
 .preview{
     width: 30%;
-    margin-bottom: 10vh;
-    margin: 10vh 35%;
+    margin-bottom: 2vh;
+    margin-top: 2vh;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid transparent;
+}
+.preview:hover{
+    border: 2px solid red
 }
 .h2{
     text-align: center;
@@ -97,7 +97,29 @@ body{
 .liRedes{
     display: inline-block;
     text-decoration: none;
+    margin-top: 2vh;
 }
 .navRedes{
     text-align: center;
+}
+.carousel-inner img{
+    width: 100%;
+    height: 100%;
+}
+.card{
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+}
+.imagenes__casas{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    list-style: none;
+}
+.maincasasprovisorio{
+    height: 70vh;
+}
+.container{
+    align-items: center;
+    justify-content: center;
 }
