--- a/css/estilos.css
+++ b/css/estilos.css
@@ -203,9 +203,23 @@ body {
   margin-left: 15px;
   text-align: justify;
 }
+.main__nosotros .cards__nosotros .container {
+  align-items: center;
+}
+.main__nosotros .cards__nosotros .container div {
+  align-items: center;
+}
+.main__nosotros .cards__nosotros .container div div {
+  align-items: center;
+  align-self: center;
+  margin: 0px;
+}
 .main__nosotros .cards__nosotros .container div div .card {
+  margin: auto;
   margin-top: 10vh;
   margin-bottom: 5vh;
+  align-items: center;
+  justify-content: center;
 }
 
 .main__contacto .h1s {
