--- a/scss/_mainnosotros.scss
+++ b/scss/_mainnosotros.scss
@@ -13,11 +13,19 @@
 
     .cards__nosotros {
         .container {
+            align-items: center;
             div {
+                align-items: center;
                 div {
+                    align-items: center;
+                    align-self: center;
+                    margin: 0px;
                     .card {
+                        margin: auto;
                         margin-top: 10vh;
                         margin-bottom: 5vh;
+                        align-items: center;
+                        justify-content: center;
                     }
                 }
             }
