--- a/scss/_404.scss
+++ b/scss/_404.scss
@@ -5,11 +5,11 @@
         display: flex;
         margin-top: 5%;
         .h1s {
-            @include titulo(4vh, 7vh, center)
+            @include titulo(4vh, 7vh, center, 34px)
         }
     
         .h2s {
-            @include subtitulo(center, 4vh, 4vh)
+            @include subtitulo(center, 4vh, 4vh, 30px)
         }
     }
 }
