--- a/scss/_maindescubre.scss
+++ b/scss/_maindescubre.scss
@@ -1,10 +1,10 @@
 .main__descubre {
     .h1s {
-        @include titulo(4vh, 7vh, center)
+        @include titulo(4vh, 7vh, center, 34px)
     }
 
     .h2s {
-        @include subtitulo(center, 4vh, 4vh)
+        @include subtitulo(center, 4vh, 4vh, 30px)
     }
 
     .p {
@@ -20,7 +20,23 @@
             .card {
                 margin-top: 4vh;
                 margin-bottom: 4vh;
+                padding: 10px;
+                background-color: map-get($colores, naranja);
+                .card-body{
+                    .card-title{
+                        text-align: center;
+                        font-size: 20px;
+                    }
+                    .card-text{
+                        font-size: 18px;
+                    }
+                }
             }
+            
+            .color{
+                background-color: $botones-card;
+            }
+
         }
     }
 }
