--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,10 +5,11 @@ $colores: (
     footer: rgb(255, 227, 185),
     facebook: rgb(0, 110, 255),
     twitter: rgb(0, 183, 255),
+    naranja: rgb(255, 232, 198),
+    rojo: rgb(255, 0, 0)
 );
 
-$rojo: rgb(255, 0, 0);
-$form: rgb(156, 70, 0);
 $labels: rgb(255, 153, 0);
+$botones-card: rgb(197, 180, 148);
 
 
