--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,7 @@
 body {
   background-color: rgb(253, 241, 222);
   font-family: "Poppins", sans-serif;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .footer {
@@ -31,6 +31,10 @@ body {
   text-decoration: none;
   font-size: 20px;
   margin-top: 3vh;
+  transition: transform 1.7s ease-in-out;
+}
+.footer .navRedes ul .liRedes__instagram:hover, .footer .navRedes ul .liRedes__twitter:hover, .footer .navRedes ul .liRedes__facebook:hover {
+  transform: rotate(360deg);
 }
 .footer .navRedes ul .liRedes__instagram .instagram, .footer .navRedes ul .liRedes__twitter .instagram, .footer .navRedes ul .liRedes__facebook .instagram {
   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
@@ -44,6 +48,9 @@ body {
   text-decoration: none;
   color: rgb(0, 110, 255);
   margin: 10px;
+}
+.footer .navRedes ul .liRedes__twitter {
+  transition: transform 1.7s ease-in-out;
 }
 .footer .navRedes ul .liRedes__twitter .twitter {
   text-decoration: none;
@@ -81,9 +88,6 @@ body {
 .nabvar {
   font-size: 19px;
 }
-.nabvar .color__nav {
-  background-color: rgb(255, 214, 152);
-}
 
 .error404 {
   height: 80vh;
@@ -97,11 +101,13 @@ body {
   margin-top: 4vh;
   margin-bottom: 7vh;
   text-align: center;
+  font-size: 34px;
 }
 .error404 .div__error404 .h2s {
   text-align: center;
   margin-top: 4vh;
   margin-bottom: 4vh;
+  font-size: 30px;
 }
 
 .main__index .container-fluid {
@@ -111,11 +117,13 @@ body {
   margin-top: 4vh;
   margin-bottom: 7vh;
   text-align: center;
+  font-size: 34px;
 }
 .main__index div .h2s {
   text-align: center;
   margin-top: 4vh;
   margin-bottom: 4vh;
+  font-size: 30px;
 }
 .main__index div .h3s {
   color: rgb(0, 0, 0);
@@ -139,18 +147,20 @@ body {
   transition-duration: 1.7s;
 }
 .main__index div .ancla__preview .preview:hover {
-  border: 4px solid rgb(255, 0, 0);
+  border: 3px solid rgb(255, 0, 0);
 }
 
 .main__descubre .h1s {
   margin-top: 4vh;
   margin-bottom: 7vh;
   text-align: center;
+  font-size: 34px;
 }
 .main__descubre .h2s {
   text-align: center;
   margin-top: 4vh;
   margin-bottom: 4vh;
+  font-size: 30px;
 }
 .main__descubre .p {
   justify-content: center;
@@ -166,12 +176,25 @@ body {
 .main__descubre .container .centrado .card {
   margin-top: 4vh;
   margin-bottom: 4vh;
+  padding: 10px;
+  background-color: rgb(255, 232, 198);
+}
+.main__descubre .container .centrado .card .card-body .card-title {
+  text-align: center;
+  font-size: 20px;
+}
+.main__descubre .container .centrado .card .card-body .card-text {
+  font-size: 18px;
+}
+.main__descubre .container .centrado .color {
+  background-color: rgb(197, 180, 148);
 }
 
 .main__ambienta .h1s {
   margin-top: 4vh;
   margin-bottom: 7vh;
   text-align: center;
+  font-size: 34px;
 }
 .main__ambienta .p {
   justify-content: center;
@@ -185,17 +208,20 @@ body {
   display: flex;
   margin-top: 4vh;
   margin-bottom: 4vh;
+  border: 3px solid rgb(255, 0, 0);
 }
 
 .main__nosotros .h1s {
   margin-top: 4vh;
   margin-bottom: 7vh;
   text-align: center;
+  font-size: 34px;
 }
 .main__nosotros .h2s {
   text-align: center;
   margin-top: 4vh;
   margin-bottom: 4vh;
+  font-size: 30px;
 }
 .main__nosotros .p {
   justify-content: center;
@@ -220,22 +246,46 @@ body {
   margin-bottom: 5vh;
   align-items: center;
   justify-content: center;
+  padding: 2%;
+  background-color: rgb(255, 232, 198);
+}
+.main__nosotros .cards__nosotros .container div div .card .card-body {
+  background-color: rgb(255, 232, 198);
+}
+.main__nosotros .cards__nosotros .container div div .card .card-body .card-title {
+  text-align: center;
+  font-size: 20px;
+}
+.main__nosotros .cards__nosotros .container div div .card .card-body .card-text {
+  font-size: 16px;
 }
 
 .main__contacto .h1s {
   margin-top: 4vh;
   margin-bottom: 7vh;
   text-align: center;
+  font-size: 34px;
 }
 .main__contacto .h2s {
   text-align: center;
   margin-top: 4vh;
   margin-bottom: 4vh;
+  font-size: 30px;
+}
+.main__contacto .div__mapa {
+  border: 3px solid rgb(255, 0, 0);
+  display: flex;
+  margin: 10vh auto;
+  width: 75%;
+}
+.main__contacto .div__mapa .mapa {
+  width: 100%;
 }
 .main__contacto .formularios .h2s {
   text-align: center;
   margin-top: 4vh;
   margin-bottom: 4vh;
+  font-size: 30px;
 }
 .main__contacto .formularios .div__form__container {
   border: 3px solid rgb(255, 0, 0);
@@ -245,17 +295,14 @@ body {
   background-size: cover;
   justify-content: center;
   margin: auto;
-  padding-bottom: 2vh;
-  padding-top: 2vh;
+  padding: 2vh;
 }
 .main__contacto .formularios .div__form__container .div__form .partesform {
   border: 2px solid rgb(255, 153, 0);
   display: flex;
   width: 60%;
   height: 2rem;
-  margin: auto;
-  margin-top: 3vh;
-  margin-bottom: 3vh;
+  margin: 3vh auto;
 }
 .main__contacto .formularios .div__form__container .div__form .label__form {
   margin: auto;
@@ -268,19 +315,22 @@ body {
 .main__contacto .formularios .div__form__container .div__form .botonesForm {
   display: flex;
   width: 60%;
-  margin: auto;
   flex-direction: column;
   flex-wrap: wrap;
-  margin-top: 2vh;
-  margin-bottom: 2vh;
+  margin: 2vh auto;
   justify-content: center;
   align-items: center;
+  background-color: rgb(197, 180, 148);
+}
+.main__contacto .formularios .div__form__container .div__form .botonesForm:hover {
+  background-color: rgb(255, 226, 172);
 }
 
 .main__casas .h1s {
   margin-top: 4vh;
   margin-bottom: 7vh;
   text-align: center;
+  font-size: 34px;
 }
 .main__casas .container-fluid {
   width: 80%;
@@ -298,6 +348,7 @@ body {
   text-align: center;
   margin-top: 4vh;
   margin-bottom: 4vh;
+  font-size: 30px;
 }
 .main__casas .div__distribucion .h3s {
   color: rgb(0, 0, 0);
