--- a/scss/_maincasas.scss
+++ b/scss/_maincasas.scss
@@ -1,6 +1,6 @@
 .main__casas {
     .h1s {
-        @include titulo(4vh, 7vh, center)
+        @include titulo(4vh, 7vh, center, 34px)
     }
 
 
@@ -20,7 +20,7 @@
     
     .div__distribucion{
         .h2s {
-            @include subtitulo(center, 4vh, 4vh)
+            @include subtitulo(center, 4vh, 4vh, 30px)
         }
 
         .h3s {
