--- a/scss/_maincontacto.scss
+++ b/scss/_maincontacto.scss
@@ -1,27 +1,37 @@
 .main__contacto {
     .h1s {
-        @include titulo(4vh, 7vh, center)
+        @include titulo(4vh, 7vh, center, 34px)
     }
 
     .h2s {
-        @include subtitulo(center, 4vh, 4vh)
+        @include subtitulo(center, 4vh, 4vh, 30px)
     }
+
+    .div__mapa{
+        border: 3px solid map-get($colores, rojo);
+        display: flex;
+        margin: 10vh auto;
+        width: 75%; 
+        .mapa {
+            width: 100%; 
+        }
+    }
+    
 
     .formularios {
         .h2s {
-            @include subtitulo(center, 4vh, 4vh)
+            @include subtitulo(center, 4vh, 4vh, 30px)
         }
 
         .div__form__container {
-            border: 3px solid $rojo;
+            border: 3px solid map-get($colores, rojo);
             align-items: center;
             width: 75%;
             background-image: url(../assets/images/fondo\ forms.jpg);
             background-size: cover;
             justify-content: center;
             margin: auto;
-            padding-bottom: 2vh;
-            padding-top: 2vh;
+            padding: 2vh;
 
             .div__form {
                 .partesform {
@@ -29,9 +39,7 @@
                     display: flex;
                     width: 60%;
                     height: 2rem;
-                    margin: auto;
-                    margin-top: 3vh;
-                    margin-bottom: 3vh;
+                    margin: 3vh auto;
                 }
 
                 .label__form {
@@ -46,13 +54,16 @@
                 .botonesForm {
                     display: flex;
                     width: 60%;
-                    margin: auto;
                     flex-direction: column;
                     flex-wrap: wrap;
-                    margin-top: 2vh;
-                    margin-bottom: 2vh;
+                    margin: 2vh auto;
                     justify-content: center;
                     align-items: center;
+                    background-color: $botones-card;
+
+                    &:hover{
+                        background-color: rgb(255, 226, 172);
+                    }
                 }
             }
         }
