--- a/scss/_mainnosotros.scss
+++ b/scss/_mainnosotros.scss
@@ -1,10 +1,10 @@
 .main__nosotros {
     .h1s {
-        @include titulo(4vh, 7vh, center)
+        @include titulo(4vh, 7vh, center, 34px)
     }
 
     .h2s {
-        @include subtitulo(center, 4vh, 4vh)
+        @include subtitulo(center, 4vh, 4vh, 30px)
     }
 
     .p {
@@ -20,12 +20,28 @@
                     align-items: center;
                     align-self: center;
                     margin: 0px;
+                    
+                    
                     .card {
                         margin: auto;
                         margin-top: 10vh;
                         margin-bottom: 5vh;
                         align-items: center;
                         justify-content: center;
+                        padding: 2%;
+                        background-color: map-get($colores, naranja);
+                        
+                        .card-body{
+                            background-color: map-get($colores, naranja);
+                            .card-title{
+                                text-align: center;
+                                font-size: 20px;
+                            }
+                            .card-text{
+                                font-size: 16px;
+                            }
+                        }
+                            
                     }
                 }
             }
